5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1709_3036.log
== TEST (2019-05-02 10:06:30) 
-- CODE:
x = float(input("Digite o valor de x: "))

if(x == x):
	if(x <= -1) or (x => 1):
	y = x
	print(y)
if(x == 1):
	if(-1 < x < 0) or (0 < x < 1):
	y = x
	print(y)
if(x == 2):
	if(x = 0)
	y = x
	print(y)
-- ERROR:
File "XXXX", line 4
    if(x <= -1) or (x => 1):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:06:57) 
-- CODE:
x = float(input("Digite o valor de x: "))

if(x == x):
	if(x <= -1) or (x => 1):
	print(x)
if(x == 1):
	if(-1 < x < 0) or (0 < x < 1):
	print(x)
if(x == 2):
	if(x = 0)
	print(x)
-- ERROR:
File "XXXX", line 4
    if(x <= -1) or (x => 1):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:08:20) 
-- CODE:
x = float(input("Digite o valor de x: "))

if(x == x):
	if(x <= -1) or (x => 1):
	print(x)

-- ERROR:
File "XXXX", line 4
    if(x <= -1) or (x => 1):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:08:38) 
-- CODE:
x = float(input("Digite o valor de x: "))

if(x == x):
	(x <= -1) or (x => 1):
	print(x)

-- ERROR:
File "XXXX", line 4
    (x <= -1) or (x => 1):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:10:06) 
-- CODE:
x = float(input("Digite o valor de x: "))

if(x == x):
	(x <= -1) or (x => 1):

-- ERROR:
File "XXXX", line 4
    (x <= -1) or (x => 1):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:10:35) 
-- CODE:
x = float(input("Digite o valor de x: "))

if(x == "x"):
	(x <= -1) or (x => 1):

-- ERROR:
File "XXXX", line 4
    (x <= -1) or (x => 1):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:10:39) 
-- CODE:
x = float(input("Digite o valor de x: "))

if(x == "x"):
	if(x <= -1) or (x => 1):

-- ERROR:
File "XXXX", line 4
    if(x <= -1) or (x => 1):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:14:07) 
-- CODE:
x = float(input("Digite o valor de x: "))

if(x == x):
	if(x <= -1) or (x => 1):
else:
	if(x == 1):
		if(-1 < x < 0) or (0 < x < 1):
			else:
				if:(x == 2):
						if(x = 0):
print(x)
-- ERROR:
File "XXXX", line 4
    if(x <= -1) or (x => 1):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:14:36) 
-- CODE:
x = float(input("Digite o valor de x: "))

if(x == x):
	(x <= -1) or (x => 1):
else:
	if(x == 1):
		(-1 < x < 0) or (0 < x < 1):
			else:
				(x == 2):
					(x = 0):
print(x)
-- ERROR:
File "XXXX", line 4
    (x <= -1) or (x => 1):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:15:31) 
-- CODE:
x = float(input("Digite o valor de x: "))

if(x == x):
	(x <= -1 or x => 1):
else:
	if(x == 1):
		(-1 < x < 0 or 0 < x < 1):
			else:
				(x == 2):
					(x = 0):
print(x)
-- ERROR:
File "XXXX", line 4
    (x <= -1 or x => 1):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:16:08) 
-- CODE:
x = float(input("Digite o valor de x (x, 1, 2: "))

if(x == x):
	(x <= -1 or x => 1):
else:
	if(x == 1):
		(-1 < x < 0 or 0 < x < 1):
			else:
				(x == 2):
					(x = 0):
print(x)
-- ERROR:
File "XXXX", line 4
    (x <= -1 or x => 1):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:20:05) 
-- CODE:
x = float(input("Digite o valor de x (x, 1, 2): "))

if(x == "x"):
	(x <= -1 or x => 1):
elif(x == 1):
	(-1 < x < 0 or 0 < x < 1):
elif(x == 2):
	(x = 0):
print(x)
-- ERROR:
File "XXXX", line 4
    (x <= -1 or x => 1):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:20:19) 
-- CODE:
x = float(input("Digite o valor de x (x, 1, 2): "))

if(x == "x"):
	((x <= -1) or (x => 1)):
elif(x == 1):
	(-1 < x < 0 or 0 < x < 1):
elif(x == 2):
	(x = 0):
print(x)
-- ERROR:
File "XXXX", line 4
    ((x <= -1) or (x => 1)):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:20:57) 
-- CODE:
x = float(input("Digite o valor de x (x, 1, 2): "))

if(x == x):
	((x <= -1) or (x => 1)):
elif(x == 1):
	((-1 < x < 0) or (0 < x < 1)):
elif(x == 2):
	(x = 0):
print(x)
-- ERROR:
File "XXXX", line 4
    ((x <= -1) or (x => 1)):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:35:52) 
-- CODE:
x = float(input("Digite o valor de x (x, 1, 2): "))

if(x == x):
	((x <= -1) or (x => 1)):
elif(x == 1):
	((-1 < x < 0) or (0 < x < 1)):
elif(x == 2):
	(x = 0):
	print(x)
-- ERROR:
File "XXXX", line 4
    ((x <= -1) or (x => 1)):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:54:00) 
-- CODE:
x = float(input("Digite o valor de x (x, 1, 2): "))

if(x == "X"):
	w = ((x <= -1) or (x => 1)):
	print(round(w, 2))
elif(x == "1"):
	w = ((-1 < x < 0) or (0 < x < 1)):
	print(round(w, 2))
elif(x == "2"):
	w = (x = 0):
	print(w)
-- ERROR:
File "XXXX", line 4
    w = ((x <= -1) or (x => 1)):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:54:08) 
-- CODE:
x = float(input("Digite o valor de x (x, 1, 2): "))

if(x == "X"):
	w = (x <= -1) or (x => 1):
	print(round(w, 2))
elif(x == "1"):
	w = ((-1 < x < 0) or (0 < x < 1)):
	print(round(w, 2))
elif(x == "2"):
	w = (x = 0):
	print(w)
-- ERROR:
File "XXXX", line 4
    w = (x <= -1) or (x => 1):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:54:12) 
-- CODE:
x = float(input("Digite o valor de x (x, 1, 2): "))

if(x == "X"):
	w = (x <= -1) or (x => 1):
	print(round(w, 2))
elif(x == "1"):
	w = ((-1 < x < 0) or (0 < x < 1)):
	print(round(w, 2))
elif(x == "2"):
	w = (x = 0):
	print(w)
-- EXECUTION TIME:
0.175851
-- ERROR:
  File "/home/codebench/codes/1709/3036/main.py", line 4
    w = (x <= -1) or (x => 1):
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
